@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.beryx.jlink' version '3.0.1'
+    id "org.javamodularity.moduleplugin" version "1.8.15"
 }
 
 group 'net.cassite'
@@ -20,7 +21,14 @@ sourceCompatibility = '21'
 targetCompatibility = '21'
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+    options.encoding = "UTF-8"
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
+    jvmArgs += '--enable-native-access=io.vproxy.pni'
+    jvmArgs += '--enable-native-access=io.vproxy.windivert'
 }
 
 application {
@@ -29,7 +37,7 @@ application {
 }
 
 javafx {
-    version = '17.0.1'
+    version = '21'
     modules = ['javafx.controls', 'javafx.swing', 'javafx.media']
 }
 
@@ -50,6 +58,8 @@ dependencies {
     implementation group: 'io.projectreactor.tools', name: 'blockhound', version: '1.0.6.RELEASE'
     implementation group: 'net.cassite', name: 'tof-pcap-java', version: '1.0.0'
     implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.1.2'
+    implementation group: 'io.vproxy', name: 'divert-java-core', version: '1.0.2'
+    implementation group: 'io.vproxy', name: 'divert-java-hostsmanager', version: '1.0.2'
 }
 
 test {
@@ -61,7 +71,11 @@ jlink {
     options = ['--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
-        jvmArgs = ['-Xmx320m', '-Djava.library.path=%TEMP%', '-Dio.vproxy.vfx.logLevel=INFO']
+        jvmArgs = ['-Xmx320m', '-Djava.library.path=%TEMP%', '-Dio.vproxy.vfx.logLevel=INFO',
+                   '--enable-preview', '--enable-native-access=ALL-UNNAMED',
+                   '--enable-native-access=io.vproxy.pni',
+                   '--enable-native-access=io.vproxy.windivert',
+        ]
         noConsole = true
     }
     mergedModule {
